# buildantic

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: master.yml  on-release-master.yml
buildantic/: __init__.py  main.py  utils.py  validator.py
buildantic/descriptor/: __init__.py  base.py  python.py
buildantic/descriptor/openapi/: __init__.py  types.py  utils.py
buildantic/registry/: __init__.py  base.py  openapi.py  python.py
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_base_descriptor.py  test_base_registry.py  test_main.py  test_openapi_operation_descriptor.py  test_openapi_operation_path_encoding.py  test_openapi_operation_query_encoding.py  test_openapi_registry.py  test_type_descriptor.py  test_type_registry.py
