[tool.poetry]
name = "buildantic"
version = "0.0.1"
description = "JSON schema generation and data validation, with native support for LLM function-calling formats"
authors = ["Harsh Verma <synacktra.work@gmail.com>"]
repository = "https://github.com/synacktraa/buildantic"
documentation = "https://synacktraa.github.io/buildantic/"
readme = "README.md"
packages = [
  {include = "buildantic"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pydantic = ">=2.0.0"
docstring-parser = ">=0.15"
jsonref = ">=1.1.0"
jsonschema = ">=4.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["buildantic"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "A001",
    "A002",
    "UP006",
    "UP007",
    "UP035",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["buildantic"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.deptry]
ignore = ["DEP001", "DEP003"]
ignore_notebooks = true
